css/styles.css
/***************
 * Reset *
 ***************/
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
  color: inherit;
  cursor: pointer;
}

a:focus,
a:hover {
  text-decoration: underline;
}

button {
  background-color: transparent;
  color: inherit;
  border-width: 0;
  padding: 0;
  cursor: pointer;
}

figure {
  margin: 0;
}

input::-moz-focus-inner {
  border: 0;
  padding: 0;
  margin: 0;
}

input[type="text"],
input[type="password"],
input[type="url"],
input[type="tel"],
input[type="search"],
input[type="number"],
input[type="datetime"],
input[type="email"] {
  background: #fff;
  background-clip: padding-box;
  border: 1px solid #000;
  border-radius: 0;
  box-sizing: border-box;
  font-family: "Gotham", Helvetica, Arial, sans-serif;
  height: 46px;
  width: 100%;
  padding: 0 10px;
  vertical-align: baseline;
}

input[type="text"]:focus,
input[type="text"]:hover,
input[type="password"]:focus,
input[type="password"]:hover,
input[type="url"]:focus,
input[type="url"]:hover,
input[type="tel"]:focus,
input[type="tel"]:hover,
input[type="search"]:focus,
input[type="search"]:hover,
input[type="number"]:focus,
input[type="number"]:hover,
input[type="datetime"]:focus,
input[type="datetime"]:hover,
input[type="email"]:focus,
input[type="email"]:hover {
  outline: none;
}

button,
[type="reset"],
[type="submit"] {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  background: #000;
  box-sizing: border-box;
  border: 1px solid #000;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-family: "Gotham", Helvetica, Arial, sans-serif;
  font-size: 17.3pt;
  font-weight: 700;
  padding: 10px 15px;
  text-transform: uppercase;
  vertical-align: middle;
}

button:focus,
button:hover {
  outline: none;
}

ul,
ol,
dd {
  margin: 0;
  padding: 0;
  list-style: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  font-size: inherit;
  font-weight: inherit;
}

p {
  margin: 0;
}

cite {
  font-style: normal;
}

fieldset {
  border-width: 0;
  padding: 0;
  margin: 0;
}

img {
  width: 100%;
  height: auto;
  display: block;
  object-fit: cover;
}

/***************
 * Typography *
 ***************/
@font-face {
  font-family: "Gotham";
  src: url("../fonts/gothamhtf-book-webfont-webfont.woff2") format("woff2"),
    url("../fonts/gothamhtf-book-webfont-webfont.woff") format("woff");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Gotham";
  src: url("../fonts/gothamhtf-bold-webfont-webfont.woff2") format("woff2"),
    url("../fonts/gothamhtf-bold-webfont-webfont.woff") format("woff");
  font-weight: 700;
  font-style: normal;
}

h1,
h2 {
  font-weight: 700;
}

h3,
h4,
h5 {
  font-weight: 400;
}

h1 {
  font-size: 25pt;
  letter-spacing: 0.1em;
}

h2 {
  font-size: 20pt;
  letter-spacing: 0.1em;
}

/***************
 * General *
 ***************/
html {
  font-size: 10.5pt; /* 14px */
}

body {
  font-family: "Gotham", Helvetica, Arial, sans-serif;
  font-size: 12pt; /* 16px */
  font-weight: 400;
  line-height: 1.5;
  color: #000;
}

.page-wrapper {
  position: relative;
}

.page-main {
  padding-left: 15px;
  padding-right: 15px;
}

.block {
  margin: 0 0 20px;
}

.block-title,
.block-title h3 {
  font-weight: 700;
  font-size: 17.3pt;
  margin: 0 0 10px;
  text-transform: uppercase;
}

.row {
  display: flex;
  flex-wrap: wrap;
}

/* Main navigation */
.nav-toggle {
  display: none;
}

.nav-items {
  position: absolute;
  top: 50px;
  left: 50px;
  z-index: 99;
}

.nav-items a {
  color: #000;
  font-size: 14.3pt;
  line-height: 2.6;
  letter-spacing: 0.3em;
  text-transform: uppercase;
}

.nav-items a:focus,
.nav-items a:hover {
  text-decoration: underline;
}

/* Footer */
.page-footer {
  padding-left: 15px;
  padding-right: 15px;
}

.footer-content {
  padding: 45px 0 0 0;
}

.footer-links {
  text-align: center;
  padding: 20px 0;
}

.footer-links ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 0;
  padding: 0;
}

.footer-links li {
  padding: 0 5px;
}

.footer-links a {
  color: #000;
  text-decoration: none;
}

.footer-links a:focus,
.footer-links a:hover {
  text-decoration: underline;
}

.form-subscribe {
  display: flex;
}

.form-subscribe .field {
  flex: 1;
}

.form-subscribe .actions {
  margin-left: auto;
}

.block-social ul {
  display: flex;
}

.block-social ul li {
  padding: 0 15px;
}

/* Hero banner */
.hero-banner {
  position: relative;
}

.hero-banner h1 {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-transform: uppercase;
}

.hero-banner img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
  min-height: 590px;
}

/* Homepage: Category section */
.banner {
  position: relative;
  margin: 0 0 20px;
}

.banner h2 {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: #fff;
  text-transform: uppercase;
  line-height: 1;
  text-align: center;
  font-size: 24pt;
}

.banner h2 span {
  display: block;
  letter-spacing: normal;
  font-size: 12pt;
}

.banner a:focus,
.banner a:hover {
  text-decoration: none;
}

/* Homepage: Instagram section*/
.section-instagram .section-title {
  font-size: 15.3pt;
  text-align: center;
  text-transform: uppercase;
  margin: 0 0 20px;
  padding: 0;
}

.section-instagram ul {
  display: flex;
  flex-wrap: wrap;
  margin: 0 -5px;
}

.section-instagram li {
  padding: 0 5px;
  flex: 50%;
  max-width: 50%;
  margin: 0 0 10px;
}

.section-instagram li:last-child {
  display: none;
}

/***************
 * Mobile *
 ***************/
@media only screen and (max-width: 979px) {
  .nav-toggle {
    background-color: #000;
    cursor: pointer;
    display: block;
    margin-top: 5px;
    height: 5px;
    width: 30px;
    transition: all 0ms 200ms;
    position: absolute;
    top: 30px;
    left: 15px;
    z-index: 99;
  }

  .nav-toggle span {
    display: none;
  }

  .nav-toggle,
  .nav-toggle:after,
  .nav-toggle:before {
    width: 24px;
    height: 4px;
    border-radius: 2px;
  }

  .nav-toggle::before {
    content: "";
    position: absolute;
    left: 0;
    bottom: 8px;
    background: black;
    transition: bottom 200ms 200ms cubic-bezier(0.23, 1, 0.32, 1),
      transform 200ms cubic-bezier(0.23, 1, 0.32, 1);
  }

  .nav-toggle::after {
    content: "";
    position: absolute;
    left: 0;
    top: 8px;
    background: black;
    transition: top 200ms 200ms cubic-bezier(0.23, 1, 0.32, 1),
      transform 200ms cubic-bezier(0.23, 1, 0.32, 1);
  }

  .nav-explain .nav-toggle {
    background: #fff;
    top: 15px;
  }

  .nav-explain .nav-toggle::after {
    top: 0;
    transform: rotate(45deg);
    transition: top 200ms cubic-bezier(0.23, 1, 0.32, 1),
      transform 200ms 200ms cubic-bezier(0.23, 1, 0.32, 1);
  }

  .nav-explain .nav-toggle::before {
    bottom: 0;
    transform: rotate(-45deg);
    transition: bottom 200ms cubic-bezier(0.23, 1, 0.32, 1),
      transform 200ms 200ms cubic-bezier(0.23, 1, 0.32, 1);
  }

  .nav-items {
    display: none;
  }

  .no-scroll {
    height: 100%;
    overflow: hidden;
  }

  .nav-explain {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background: #fff;
    z-index: 100;
  }

  .nav-explain .nav-items {
    display: block;
    top: 30px;
    left: 0;
    padding: 15px;
  }

  .row-footer {
    flex-direction: column;
    justify-content: center;
  }

  .row-footer .col-footer:first-child {
    order: 10;
  }

  .block-customer-links {
    text-align: center;
  }

  .block-social {
    margin: 0;
  }

  .block-newsletter .block-title {
    text-align: center;
  }

  .hero-banner {
    margin: 0 -15px 20px;
  }

  .row-banner .col {
    flex: 100%;
    max-width: 100%;
  }

  .block-social ul {
    justify-content: center;
  }
}

/***************
 * Desktop *
 ***************/
@media only screen and (min-width: 980px) {
  .page-main,
  .page-footer {
    box-sizing: border-box;
    margin-left: auto;
    margin-right: auto;
    padding: 0;
    width: auto;
  }

  .page-footer {
    max-width: 1250px;
  }

  .footer-links {
    padding: 85px 0 65px;
  }

  .footer-links li {
    padding: 0;
  }

  .footer-links li::after {
    content: "|";
    padding: 0 15px;
  }

  .footer-links li:last-child:after {
    content: "";
    padding: 0;
  }

  .row-footer {
    justify-content: space-between;
  }

  .hero-banner h1 {
    font-size: 50pt;
  }

  /* Homepae: Category section*/
  .banner {
    margin: 0;
  }

  .banner h2 {
    font-size: 35pt;
  }

  .banner h2 span {
    font-size: 17pt;
  }

  .row-banner .col {
    flex: 50%;
    max-width: 50%;
    height: 100%;
  }

  .row-banner .col .banner-image {
    display: block;
    height: 100%;
  }

  /* Homepage: Instagram section*/
  .section-instagram .section-title {
    font-size: 17.3pt;
    margin: 25px 0;
  }

  .section-instagram li {
    padding: 0;
    flex: 20%;
    max-width: 20%;
    margin: 0;
  }

  .section-instagram li:last-child {
    display: block;
  }

  .section-instagram li a {
    display: block;
    height: 100%;
  }

  .section-instagram li img {
    height: 100%;
  }
}
/* Desktop : 1440px*/
@media only screen and (min-width: 1440px) {
  .nav-items {
    top: 150px;
  }

  .hero-banner h1 {
    font-size: 70pt;
  }

  .hero-banner img {
    max-height: 853px;
  }

  .banner h2 {
    font-size: 50pt;
  }

  .banner h2 span {
    font-size: 25pt;
  }
}

